--- a/src/components/modalBtn/modalBtn.css
+++ b/src/components/modalBtn/modalBtn.css
@@ -14,6 +14,12 @@
     border-color:#39d6d6;
 }
 
+.experience:focus {
+    background-color: #39d6d6;
+    border-color:#39d6d6;
+}
+
+
 .jobLabel {
     display: flex;
     flex-direction: column;
