--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -83,3 +83,55 @@
     background-color: #39d6d6;
     border-color:#39d6d6;
 }
+
+.image-cropper {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-right: 30px;
+}
+.profile-pic {
+  display: inline;
+  margin: 0 auto;
+  margin-left: -25%;
+  height: 100%;
+  width: auto;
+}
+
+.profile {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+
+@media only screen and (max-width: 600px) {
+    * {
+        font-size: small;
+    }
+    .body {
+        background-color: #fafafa;
+        height: 500px;
+        display: flex;
+        flex-direction: column;
+    }
+    .header {
+        margin-bottom: 150px;
+    }
+    .bodyBlock {
+        height: 200px;
+        width: 80%;
+        margin-top: 10px;
+        background-color: #ffffff;
+        border: 1px solid #f7f7f7;
+        box-shadow: 3px 3px 3px grey;
+    }
+
+    .profile {
+        flex-direction: column;
+    }
+    .image-cropper {
+        margin: 20px auto;
+    }
+}
