--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+#basic-navbar-nav > div > div:nth-child(1), #basic-navbar-nav > div > div:nth-child(2) {
+  transform: none !important;
+}
 
 .App-header {
   background-color: #282c34;
